kubernetes/applications/hello-crud/overlays/dev/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-crud
  namespace: hello-crud
spec:
  parentRefs:
    - name: homelab
      namespace: gateway-system
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-crud
          port: 80
